--- a/ProjectSample/pom.xml
+++ b/ProjectSample/pom.xml
@@ -18,6 +18,11 @@
             <artifactId>jmdns</artifactId>
             <version>3.4.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.3</version>
+        </dependency>
 
     </dependencies>
 </project>
